fixed navbar visibility

--- a/frontend/src/components/Navbar/index.scss
+++ b/frontend/src/components/Navbar/index.scss
@@ -3,6 +3,7 @@ header {
     position: fixed;
     z-index: 99;
     color: var(--secondary);
+    background-color: rgba($color: #000000, $alpha: 0.7);
     top: 0;
     left: 0;
     right: 0;
